# LCCControlPanelTouchscreen

./: .gitmodules  CMakeLists.txt  FLASHING.md  README.md  TASK.md  lv_conf.h  partitions.csv  sdkconfig.defaults
.github/workflows/: build-release.yml
components/board_drivers/: CMakeLists.txt  ch422g.c  waveshare_lcd.c  waveshare_sd.c  waveshare_touch.c
components/board_drivers/include/: ch422g.h  waveshare_lcd.h  waveshare_sd.h  waveshare_touch.h
docs/: AGENTS.md  ARCHITECTURE.md  INTERFACES.md  SPEC.md  TEST_PLAN.md
main/: CMakeLists.txt  Kconfig.projbuild  idf_component.yml  lv_conf.h  main.c
main/app/: app.h  bootloader_hal.cpp  bootloader_hal.h  lcc_config.hxx  lcc_node.cpp  lcc_node.h  panel_layout.c  panel_layout.h  panel_storage.c  panel_storage.h  scene_storage.c  scene_storage.h  screen_timeout.c  screen_timeout.h  turnout_manager.c  turnout_manager.h  turnout_storage.c  turnout_storage.h
main/ui/: panel_geometry.c  panel_geometry.h  ui.h  ui_add_turnout.c  ui_common.c  ui_common.h  ui_main.c  ui_manual.c  ui_panel.c  ui_panel_builder.c  ui_splash.c  ui_turnouts.c
printed_mounts/: README.md
printed_mounts/Single Piece/: Waveshare ESP32-S3-Touch_LCD-4.3B Angled Mount v4.f3d  Waveshare ESP32-S3-Touch_LCD-4.3B Angled Mount v4.stl
printed_mounts/Two Piece/: Waveshare ESP32-S3-Touch_LCD-4.3B Angled Mount (Accessible Ports) v4.3mf  Waveshare ESP32-S3-Touch_LCD-4.3B Angled Mount (Accessible Ports) v4.f3d
sdcard/: turnouts.json
